# kokkos-miniapps

./: .gitignore  .gitmodules  CMakeLists.txt
lulesh-2.0/: CMakeLists.txt
lulesh-2.0/kokkos-minimal-cpu/: CMakeLists.txt
lulesh-2.0/kokkos-optimized/: CMakeLists.txt
